p2p-setup/1_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: peer-to-peer-platform
  labels:
    name: peer-to-peer-platform
