p2p-setup/4_node-a-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-a-deployment
  namespace: peer-to-peer-platform
  labels:
    app: node-a-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-a-deployment
  template:
    metadata:
      labels:
        network/platform-network: "true"
        service: node-a-service
        app: node-a-deployment
    spec:
      containers:
        - name: node-a-deployment
          image: bsilveira1974/p2p-app-image:1.0
          ports:
            - containerPort: 4242
