p2p-setup/2_platform-network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: platform-network
  namespace: peer-to-peer-platform
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/platform-network: "true"
  podSelector:
    matchLabels:
      network/platform-network: "true"
